--- a/feedback.css
+++ b/feedback.css
@@ -1,7 +1,63 @@
+*{ box-sizing: border-box;}
 body {
     background-color: #252026;
 }
+.wrapper 
+{
+    width: 500px;
+    height: 500px;
+   
+    margin: 10px auto;
+}
+h1 {
+    font-size: 50px;
+    color: whitesmoke;
+    text-align: center;
+    border-bottom: 2px solid whitesmoke;
+}
+table {
+    font-size: 20px;
+}
+td{
+padding: 5px 10px 0px 0px;
+}
+.txt { 
+    width: 150px;
+    height: 25px;
+    border-radius: 8px;
+}
+ .txtarea {
+     width: 415px;
+    height: 75px;
+    border-radius: 8px;
+} 
+.btn{
+    width: 415px;
+    height: 25px;
+    background-color: blueviolet;
+    border-radius: 4px;
+    font-size: 10px;
+    color: whitesmoke;
+}
 
+label
+{
+    color: whitesmoke;
+}
+.i {
+    color: whitesmoke;
+}
+footer {
+    font-size: 60%;
+    text-align: center;
+    padding: 5px;
+    color: whitesmoke;   
+    position: absolute;
+    background-color: #252026;    
+    right: 0%;
+    left: 0%;
+    bottom: 0%;
+}
 
 nav {
     background-color: #252026;
@@ -46,27 +102,4 @@ main { background-color: whitesmoke;
               padding: 10px 20px;
    
    } 
-
-h1 {
-    color: whitesmoke;
-    text-align: center;
-    text-decoration: underline;
-    font-size: 60px;
-}
-
-
-p {
-    color: whitesmoke;
-    text-align: center;
-    font-size: 20px;
-}
-footer {
-    font-size: 60%;
-    text-align: center;
-    padding: 5px;
-    color: whitesmoke; 
-    position: absolute; 
-    right: 0%;
-    left: 0%; 
-    bottom: 0%;
-}
+ 
