--- a/menu.css
+++ b/menu.css
@@ -1,8 +1,6 @@
 body {
     background-color: #252026;
 }
-
-
 nav {
     background-color: #252026;
     font-weight: bolder;
@@ -47,26 +45,53 @@ main { background-color: whitesmoke;
    
    } 
 
-h1 {
-    color: whitesmoke;
-    text-align: center;
-    text-decoration: underline;
-    font-size: 60px;
-}
-
-
 p {
     color: whitesmoke;
-    text-align: center;
-    font-size: 20px;
 }
+h1{
+    color: rebeccapurple;
+    size: bold;
+    text-decoration: underline;
+}
+#container {
+display: flex;
+justify-content: center;
+align-items: center;
+min-height: 600px;
+}
+#menu1{
+    width: 43.33%;
+    float: left;
+}
+
+#menu2{
+    width: 40.33%;
+    float: right;
+}
+
+#menu3{
+    width: 40.33%;
+    float: inline-end;
+}
+
+#menu4{
+    width: 41.33%;
+    float: left;
+}
+
+#menu5{
+    width: 28.33%;
+    float:inline-end;
+}
+
 footer {
     font-size: 60%;
     text-align: center;
     padding: 5px;
-    color: whitesmoke; 
-    position: absolute; 
+    color: whitesmoke;   
+    position: absolute;
+    background-color: #252026;    
     right: 0%;
-    left: 0%; 
+    left: 0%;
     bottom: 0%;
 }
